--- a/augmented_cyclegan/augmented_phase_two.ipynb
+++ b/augmented_cyclegan/augmented_phase_two.ipynb
@@ -15,7 +15,7 @@
     }
    ],
    "source": [
-    "from cycada_utils import *\n",
+    "from augmented_utils import *\n",
     "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
     "print(f'On {device}')\n",
     "Tensor  = torch.cuda.FloatTensor\n"
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -31,7 +31,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "06da68a0e22a4daf93c0bc823c6ab77f",
+       "model_id": "10a89bc6638c4cba83aed9d27ea76942",
        "version_major": 2,
        "version_minor": 0
       },
@@ -52,7 +52,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "09b2ea9f1dec4477a9c54c381b4a1ec3",
+       "model_id": "538bf6337a5a4530a0976a88efd80a22",
        "version_major": 2,
        "version_minor": 0
       },
@@ -87,59 +87,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "class NLayerDiscriminator(nn.Module):\n",
-    "    def __init__(self, input_nc, ndf=64, n_layers=3, norm_layer=nn.InstanceNorm2d):\n",
-    "        super(NLayerDiscriminator, self).__init__()\n",
-    "        \n",
-    "        if type(norm_layer) == functools.partial:\n",
-    "            use_bias = norm_layer.func == nn.InstanceNorm2d\n",
-    "        else:\n",
-    "            use_bias = norm_layer == nn.InstanceNorm2d\n",
-    "\n",
-    "        kw = 4\n",
-    "        padw = 1\n",
-    "        sequence = [\n",
-    "            nn.Conv2d(input_nc, ndf, kernel_size=kw, stride=2, padding=padw),\n",
-    "            nn.LeakyReLU(0.2, True)\n",
-    "        ]\n",
-    "\n",
-    "        nf_mult = 1\n",
-    "        nf_mult_prev = 1\n",
-    "        for n in range(1, n_layers):\n",
-    "            nf_mult_prev = nf_mult\n",
-    "            nf_mult = min(2**n, 8)\n",
-    "            sequence += [\n",
-    "                nn.Conv2d(ndf * nf_mult_prev, ndf * nf_mult,\n",
-    "                          kernel_size=kw, stride=2, padding=padw, bias=use_bias),\n",
-    "                norm_layer(ndf * nf_mult),\n",
-    "                nn.LeakyReLU(0.2, True)\n",
-    "            ]\n",
-    "\n",
-    "        nf_mult_prev = nf_mult\n",
-    "        nf_mult = min(2**n_layers, 8)\n",
-    "        sequence += [\n",
-    "            nn.Conv2d(ndf * nf_mult_prev, ndf * nf_mult,\n",
-    "                      kernel_size=kw, stride=1, padding=padw, bias=use_bias),\n",
-    "            norm_layer(ndf * nf_mult),\n",
-    "            nn.LeakyReLU(0.2, True)\n",
-    "        ]\n",
-    "        sequence += [nn.Conv2d(ndf * nf_mult, 1, kernel_size=kw, stride=1, padding=padw)]\n",
-    "        \n",
-    "            # Add global average pooling\n",
-    "#         sequence += [nn.AdaptiveAvgPool2d(1)]\n",
-    "\n",
-    "            # Add final convolution layer to reduce spatial dimensions to 1x1\n",
-    "#         sequence += [nn.Conv2d(1, 1, kernel_size=1, stride=1, padding=0)]\n",
-    "\n",
-    "        self.model = nn.Sequential(*sequence)\n",
-    "\n",
-    "    def forward(self, input):\n",
-    "        return self.model(input)\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
