--- a/augmented_cyclegan/augmented_phase_two.ipynb
+++ b/augmented_cyclegan/augmented_phase_two.ipynb
@@ -2,14 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Figure directory exists.\n",
       "On cuda:0\n"
      ]
     }
@@ -18,12 +17,13 @@
     "from augmented_utils import *\n",
     "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
     "print(f'On {device}')\n",
-    "Tensor  = torch.cuda.FloatTensor\n"
+    "Tensor  = torch.cuda.FloatTensor\n",
+    "from augmented_modules import ResnetBlock, CondInstanceNorm, TwoInputSequential, CINResnetBlock, InstanceNorm2d\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -31,7 +31,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "10a89bc6638c4cba83aed9d27ea76942",
+       "model_id": "c2d59591df03421c9425b0311b685549",
        "version_major": 2,
        "version_minor": 0
       },
@@ -52,7 +52,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "538bf6337a5a4530a0976a88efd80a22",
+       "model_id": "f78147716bfa4906b51009a4b35618a8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -87,39 +87,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# mod = NLayerDiscriminator(3, 64, 4, nn.InstanceNorm2d)\n",
-    "# img = torch.rand((5, 3, 224, 224))\n",
-    "# x = mod(img)\n",
-    "# x.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def process_discriminator_output(output_tensor):\n",
-    "    binary_tensor = torch.where(output_tensor > 0.5, torch.tensor(1), torch.tensor(0))\n",
-    "    \n",
-    "    # Count the number of 1s in each subarray\n",
-    "    count_ones = torch.sum(binary_tensor, dim=(2, 3))\n",
-    "#     print(binary_tensor)\n",
-    "    # Convert majority to 1, otherwise to 0\n",
-    "    majority_tensor = torch.where(count_ones > 72 , torch.tensor(1), torch.tensor(0))\n",
-    "    \n",
-    "    return majority_tensor.view(-1)"
+    "prior_z_B = img.data.new(img.size(0), 16, 1, 1).normal_(0, 1)\n"
    ]
   },
   {
@@ -128,17 +107,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def prediction(out, target=None, onehot=True):\n",
-    "    if target is None :\n",
-    "        _, label = torch.max(out.data, 1)\n",
-    "        return label\n",
-    "    else:\n",
-    "        if onehot:\n",
-    "            _, label = torch.max(out.data, 1)\n",
-    "        else: #if output is a one channel, set a label where threshold is 0.5\n",
-    "            label = torch.where(out.data>torch.FloatTensor([0.5]), torch.ones(out.size()[0]).long(), torch.zeros(out.size()[0]).long())\n",
-    "        acc = (label == target).sum().item() / target.size()[0]\n",
-    "        return label, acc"
+    "mod = CINResnetGenerator(nlatent=16, input_nc=3, output_nc=3, ngf=64, norm_layer=norm_layer_C,\n",
+    "                 use_dropout=False, n_blocks=3, gpu_ids=[], padding_type='reflect')\n",
+    "img = torch.rand((5, 3, 224, 224))\n",
+    "x = mod(img,prior_z_B)\n"
    ]
   },
   {
@@ -147,28 +119,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Pixel_Level_Adaptation():\n",
-    "    def __init__(self, gan_mode='wgangp'):\n",
-    "        super(Pixel_Level_Adaptation,self).__init__()\n",
+    "class Pixel_Level_Augmented_CycleGAN():\n",
+    "    def __init__(self):\n",
+    "        super(Pixel_Level_Augmented_CycleGAN,self).__init__()\n",
     "        \n",
-    "        self.gan_mode = gan_mode\n",
-    "        norm_layer_G = functools.partial(nn.BatchNorm2d, affine=True, track_running_stats=True)\n",
+    "        norm_layer_C = CondInstanceNorm\n",
     "        norm_layer_D = functools.partial(nn.InstanceNorm2d, affine=False)\n",
-    "        self.G_ST = ResnetGenerator(3, 3, 64, norm_layer=norm_layer_G, use_dropout=False, n_blocks=2)\n",
-    "        self.G_TS = ResnetGenerator(3, 3, 64, norm_layer=norm_layer_G, use_dropout=False, n_blocks=2)\n",
+    "        \n",
+    "        self.G_ST = CINResnetGenerator(nlatent=16, input_nc=3, output_nc=3, ngf=64, norm_layer=norm_layer_C,\n",
+    "                 use_dropout=False, n_blocks=3, gpu_ids=[], padding_type='reflect')\n",
+    "        \n",
+    "        self.G_TS = CINResnetGenerator(nlatent=16, input_nc=3, output_nc=3, ngf=64, norm_layer=norm_layer_C,\n",
+    "                 use_dropout=False, n_blocks=3, gpu_ids=[], padding_type='reflect')\n",
     "\n",
-    "        self.D_T = NLayerDiscriminator(input_nc=3, ndf=64, n_layers=4, norm_layer=norm_layer_D)\n",
-    "        self.D_S = NLayerDiscriminator(input_nc=3, ndf=64, n_layers=4, norm_layer=norm_layer_D)\n",
+    "        self.D_T = \n",
+    "        self.D_S =\n",
     "\n",
     "        \n",
-    "        self.f_s = Multi_City_CNN()\n",
-    "        self.f_s.load_state_dict(torch.load('dlm4.pt'))\n",
     "\n",
     "        self.G_ST.to(device)\n",
     "        self.G_TS.to(device)\n",
     "        self.D_S.to(device)\n",
     "        self.D_T.to(device)\n",
-    "        self.f_s.to(device)\n",
     "\n",
     "\n",
     "        self.ganloss = GANLoss(gan_mode=self.gan_mode).to(device)       \n",
@@ -193,6 +165,7 @@
     "        self.real_S = batch['D img'].type(Tensor)\n",
     "        self.real_T = batch['L img'].type(Tensor)\n",
     "        self.real_lbl = batch['D pm'].type(Tensor).float()\n",
+    "        self.prior = self.real_S.data.new(self.real_S.size(0), 16, 1, 1).normal_(0, 1)\n",
     "        \n",
     "    def sample_images(self, dataloader, epochs, iters, save = False):\n",
     "        source = next(iter(dataloader))\n",
@@ -17279,7 +17252,7 @@
    "source": [
     "history = {'epoch':[],'G_loss': [], 'DS_loss':[], 'DT_loss':[], 'batch':[]}\n",
     "\n",
-    "model = Pixel_Level_Adaptation(gan_mode='wgangp')\n",
+    "model = Pixel_Level_Augmented_CycleGAN(gan_mode='wgangp')\n",
     "best_gen_loss = 1e6\n",
     "best_DT_loss = 1e6\n",
     "best_DS_loss = 1e6\n",
