--- a/current_phases/feature_level_model.ipynb
+++ b/current_phases/feature_level_model.ipynb
@@ -11,82 +11,73 @@
      "text": [
       "Figure directory exists.\n"
      ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "76dded98521e4103b6721e9d38faeef2",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=31475.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "475c2170cc0a45c4be1dfa3743e5d8a9",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=4.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
     }
    ],
    "source": [
     "from cycada_utils import *\n",
     "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
-    "tr = CyDataset()\n",
-    "train, val = train_test_split(tr, test_size=0.2, random_state=42)\n",
-    "train_dataloader = DataLoader(\n",
-    "    train,\n",
-    "    batch_size=5,\n",
-    "    shuffle=True)\n",
+    "# tr = CyDataset()\n",
+    "# train, val = train_test_split(tr, test_size=0.2, random_state=42)\n",
+    "# train_dataloader = DataLoader(\n",
+    "#     train,\n",
+    "#     batch_size=5,\n",
+    "#     shuffle=True)\n",
     "\n",
-    "val_dataloader = DataLoader(\n",
-    "    val,\n",
-    "    batch_size=1,\n",
-    "    shuffle=True)"
+    "# val_dataloader = DataLoader(\n",
+    "#     val,\n",
+    "#     batch_size=1,\n",
+    "#     shuffle=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ft=torch.rand((5,1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[0.5081],\n",
-       "        [0.5117],\n",
-       "        [0.5054],\n",
-       "        [0.5125],\n",
-       "        [0.5147]], grad_fn=<SigmoidBackward0>)"
+       "tensor([[0.6314],\n",
+       "        [0.6996],\n",
+       "        [0.4094],\n",
+       "        [0.7100],\n",
+       "        [0.6950]])"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ft"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.4941],\n",
+       "        [0.4926],\n",
+       "        [0.4969],\n",
+       "        [0.4924],\n",
+       "        [0.4928]], grad_fn=<SigmoidBackward0>)"
+      ]
+     },
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +112,6 @@
    "source": [
     "mod = NLayerDiscriminator(3, 64, 4, nn.InstanceNorm2d)\n",
     "img = torch.rand((5, 3,224,224))\n",
-    "ft=torch.rand((5,1))\n",
     "yy = mod(img)\n",
     "target_label = torch.zeros(x.size()[0]).long()\n",
     "# x.shape"
